# sdk-cpp

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml  publish.yml
include/wsocket/: wsocket.hpp
src/: wsocket.cpp
